# Collector

./: .gitignore  Cargo.toml  LICENSE  README.md  collector_packer_config.json
collector_cli/: Cargo.toml
collector_cli/src/: args.rs  list_parse.rs  main.rs
collector_engine/: Cargo.toml
collector_engine/src/: builder.rs  collect.rs  collectvss.rs  helper.rs  lib.rs  lowfs.rs  parser.rs  vss.rs  writer.rs
collector_engine/src/csv/: csvlog.rs  mod.rs
collector_engine/src/extract/: lowfs.rs  mod.rs  sector_reader.rs
collector_engine/src/mount/: mod.rs
collector_gui/: Cargo.toml
collector_packer/: Cargo.toml
collector_packer/src/: main.rs
collector_vss/: Cargo.toml
collector_vss/src/: info.rs  lib.rs
ressources/: Exemple.yaml.template
ressources/AntiVirus/: Windows_Defender.yaml
ressources/App/Remote Access/: Anydesk.yaml  Atera.yaml  Splashtop.yaml  TeamViewer.yaml
ressources/Browser/: brave.yaml  chrome.yaml  edge.yaml  firefox.yaml
ressources/Collection/: antivirus.yaml  apps.yaml  browsers.yaml  group_all.yaml  system_windows.yaml
ressources/Windows/: activities_cache.yaml  appcompat.yaml  ese-db.yaml  eventlog.yaml  iexplorer.yaml  jumplist.yaml  ntfs.yaml  powershell_log.yaml  prefectch.yaml  rdp_bmc.yaml  registry.yaml  scheduled_tasks.yaml  startup_program.yaml  thumbs.yaml  windows_search.yaml
symlinkvss/: HarddiskVolumeShadowCopy2
