[package]
name = "collector_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
collector_engine = { path="../collector_engine" }

clap = {version="4.5.2", features=["derive"]}
simplelog = {version="0.12.2", features=["termcolor"]}
log = "0.4.21"
tokio = { version="1.35.1", features = ["full"] }