[package]
name = "collector_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = {version="4.5.2", features=["derive"]}
simplelog = {version="0.12.2", features=["termcolor"]}
log = "0.4.21"
tokio = { version="1.35.1", features = ["full"] }
chrono = "0.4.38"
sysinfo = "0.30.11"
