[package]
name = "collector_engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.1"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version="1.35.1", features = ["full"] }
ntfs = "0.4.0"
anyhow = "1.0.80"
regex = "1.10.3"
log = "0.4.21"
walkdir = "2.5.0"
zip = "0.6.6"
filetime = "0.2.23"
winapi = { version = "0.3.9", features = ["vsbackup", "vsserror", "winnt", "winerror", "cguid", "combaseapi", "impl-default"] }
widestring = "0.4.3"
serde_yml = "0.0.4"
